[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Eug-Chua <eugene.chua.mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
requests = "^2.32.3"
numpy = "^2.0.0"
pyarrow = "^16.1.0"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
